Fixes whitespace on home description

--- a/src/components/pages/_Home.scss
+++ b/src/components/pages/_Home.scss
@@ -26,7 +26,7 @@
     }
 
     p {
-      padding: 1vmax 0;
+      padding: 1rem 0;
     }
   }
 
